# my-telegram-assistant

./: .bandit  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  README.ru.md  alembic.ini  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/actions/build-grpc-proto/: action.yml
.github/workflows/: python-check.yml  react-app-ci.yml  smoke-check.yml  vue-app-ci.yml
app/: __init__.py  config.py  container.py
backend/services/assistant/: container.py
backend/services/assistant_manager/: container.py  handlers.py  main.py
backend/services/control_panel_api/: container.py
backend/services/db/: dal.py  types.py
backend/services/redis/: config.py
backend/utils/common/: patterns.py
backend/utils/tiktok/: __init__.py
control_panel/: nginx.conf
control_panel/react-app/: package-lock.json  package.json
control_panel/react-app/src/: index.tsx
protobufs/services/assistant/: assistant.proto
protobufs/services/assistant_manager/: assistant_manager.proto
services/: sent_post_msg_info_cache_manager.py
services/assistant/: Dockerfile  __init__.py  assistant.py  commands.py  config.py  container.py  entrypoint.py  handlers.py  main.py
services/assistant/commands/: __init__.py  decorators.py
services/assistant/grpc/: server.py
services/assistant/handlers/: all.py
services/assistant/tests/: __init__.py  test_commands.py  test_smoke.py
services/assistant/utils/: __init__.py  message.py
services/assistant_manager/: Dockerfile  config.py  container.py  entrypoint.py  handlers.py  main.py
services/assistant_manager/bot/: __init__.py
services/assistant_manager/grpc/: __init__.py  server.py
services/control_panel/: .dockerignore  Dockerfile  __init__.py  nginx.conf
services/control_panel/react-app/: package-lock.json  package.json
services/control_panel_api/: __init__.py  container.py  main.py  responses.py
services/control_panel_api/schemas/: __init__.py
services/db/: __init__.py  config.py  init.sql  models.py  types.py  utils.py
services/redis/: __init__.py  config.py
services/worker/: Dockerfile  app.py  config.py  container.py  tasks.py
src/: alembic.ini  conftest.py
src/api/: di.py
src/assistant/: client.py  container.py  entrypoint.py  main.py  tasks.py  templates.py
src/assistant/commands/: __init__.py  decorators.py  handler.py  process.py  request.py  types.py
src/assistant/grpc_/: __init__.py  client.py  server.py
src/assistant/handlers/: __init__.py  all.py  convert_music.py  download_post.py  hello.py
src/assistant/templates/: hello.html
src/assistant/tests/: test_commands.py
src/bot/: __init__.py  container.py  dependencies.py  entrypoint.py  keyboards.py  main.py  permissions.py  templates.py
src/bot/grpc_/: __init__.py  client.py  server.py
src/bot/handlers/: __init__.py  login.py  logout.py  settings.py  start.py  status.py
src/bot/templates/: hello.html
src/core/dal/: __init__.py  user.py
src/core/models/: __init__.py  auth.py  user.py
src/core/schemas/: __init__.py  user.py
src/infrastructure/: __init__.py
src/infrastructure/assistant/: config.py
src/infrastructure/bot/: config.py
src/infrastructure/common/: config.py
src/infrastructure/db/: config.py  dal.py
src/infrastructure/instagram/: config.py
src/infrastructure/redis/: config.py
src/migrations/: env.py
src/migrations/versions/: 1946781b851b_add_user_model.py  2023_09_16_2157-8b68b269b712_add_authorization_models.py  5373211b8e30_add_user_model.py  (+1 more)
src/post/: adapters.py
src/post/cache/: base.py  (+1 more)
src/services/: __init__.py
src/utils/: __init__.py  factory.py  url_patterns.py
src/worker/: __init__.py  app.py  config.py  container.py
utils/: qrcode.py  url_patterns.py
utils/aiogram/: __init__.py  decorators.py
utils/aiotdlib/: __init__.py  client.py  decorators.py  message.py  protocols.py
utils/common/: __init__.py  patterns.py  text.py  types.py
utils/grpc/: client.py
utils/img/: base64.py
utils/post/: __init__.py  exceptions.py  impl.py
utils/python_telegram_bot/: decorators.py
utils/telegram/: message.py  models.py  protocols.py
utils/tiktok/: __init__.py
utils/youtube/: __init__.py
web/: .dockerignore  Caddyfile  Dockerfile
web/vue-app/: package-lock.json  package.json
(+160 files in other folders)
