[tool.poetry]
name = "telegram-assistant"
version = "0.1.0"
description = "Telegram assistant"
authors = ["Dmitry Vasiliev <contact.vasiliev.dmitry@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
loguru = "^0.7.0"
pytube = "^15.0.0"
celery = "^5.3.1"
redis = "^4.5.5"
aioredis = "^2.0.1"
dependency-injector = "^4.41.0"
asgiref = "^3.7.2"
grpcio-tools = "^1.54.2"
grpcio = "^1.56.0"
google = "^3.0.0"
fastapi = "^0.97.0"
uvicorn = "^0.22.0"
pydantic = "^1.10.9"
SQLAlchemy = {extras = ["asyncio"], version = "^2.0.16"}
htmgem = "^0.0.2"
Telethon = "1.28.5"
qrcode = {extras = ["pil"], version = "^7.4"}
python-telegram-bot = "20.3"
psycopg = "^3.1.9"

[tool.poetry.group.dev.dependencies]
mypy = "^1.4"
flake8 = "^6.0.0"
pytest = "^7.3.2"
types-redis = "^4.5.5"
types-protobuf = "^4.23.0"
mypy-protobuf = "^3.4.0"
pytest-cov = "^4.1.0"
black = "^23.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
ignore_missing_imports = "True"

[tool.black]
target-version = ["py310"]
line_length = 120

[tool.pytest.ini_options]
markers = [
    "smoke",
]
